--- a/assignment #4/index.html
+++ b/assignment #4/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Assignment #3</title>
 </head>
+
 <body>
+    <div>
+        <ul class="topHeader">
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signUp.html">Sign Up</a></li>
+            <li><a href="dashBorad.html">DashBoard</a></li>
+            <li><a href="mennu.html">Menu</a></li>
+        </ul>
+    </div>
     <h2>Class Assignment Batch#3 Section A</h2>
     <h1>Food Resturant</h1>
     <img width="100%" height="300px" src="./images/download.jpg" alt="food resturant image">
-    <ul>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="signUp.html">Sign Up</a></li>
-        <li><a href="dashBorad.html">DashBoard</a></li>
-        <li><a href="mennu.html">Menu</a></li>
-    </ul>
 
 </body>
+
 </html>
