--- a/assignment #5/index.html
+++ b/assignment #5/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment #5</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <div>
+        <ul>
+            <li><img src="https://www.zilliondesigns.com/images/portfolio/fast-food-restaurant/fast-food-restaurant-02.png" alt="logoImage"></li>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>Services</li>
+            <li><Button>Sign Up</Button></li>
+        </ul>
+    </div>
+    <div>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmiyfIiWDtjXFHrUREOWyRn5GjMVt4lFGOZw&usqp=CAU" alt="Slider Image">
+    </div>
+    <div>
+        <h2>Fast Food Items</h2> <br>
+
+    </div>
+    <div>
+        <h2>Suggetions</h2>
+        
+    </div>
 </body>
 </html>
