--- a/assignment #5/index.html
+++ b/assignment #5/index.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Assignment #5</title>
 </head>
+
 <body>
     <div>
         <ul>
-            <li><img src="https://www.zilliondesigns.com/images/portfolio/fast-food-restaurant/fast-food-restaurant-02.png" alt="logoImage"></li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Contact</li>
-            <li>Services</li>
-            <li><Button>Sign Up</Button></li>
+            <li class="logoImg">
+                <a href="#">
+                    <img width="60px" height="60px"
+                        src="https://images.vexels.com/media/users/3/136309/isolated/preview/c6539229ad5c57c313d95711a1e676db-logo-burger-fast-food-by-vexels.png"
+                        alt="logoImage">
+                </a>
+            </li>
+            <li class="navLink navBtn"><a href="#">Sign in / Sign up</a></li>
+            <li class="navLink"><a href="#">Cart</a></li>
+            <li class="navLink"><a href="#">Store</a></li>
+            <li class="navLink"><a href="#">Menu</a></li>
+            <li class="navLink"><a href="#">Home</a></li>
         </ul>
     </div>
     <div>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmiyfIiWDtjXFHrUREOWyRn5GjMVt4lFGOZw&usqp=CAU" alt="Slider Image">
+        <img width="100%" height="400px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmiyfIiWDtjXFHrUREOWyRn5GjMVt4lFGOZw&usqp=CAU"
+            alt="Slider Image">
     </div>
-    <div>
+    <div class="foodItems">
         <h2>Fast Food Items</h2> <br>
 
     </div>
-    <div>
+    <div class="Suggest">
         <h2>Suggetions</h2>
-        
+
     </div>
 </body>
+
 </html>
