--- a/assignment #5/index.html
+++ b/assignment #5/index.html
@@ -26,17 +26,69 @@
         </ul>
     </div>
     <div>
-        <img width="100%" height="400px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTmiyfIiWDtjXFHrUREOWyRn5GjMVt4lFGOZw&usqp=CAU"
+        <img width="100%" height="400px"
+            src="https://img.freepik.com/free-vector/isometric-fast-food-collection-with-different-products-drinks_1284-34490.jpg?size=626&ext=jpg"
             alt="Slider Image">
     </div>
-    <div class="foodItems">
-        <h2>Fast Food Items</h2> <br>
-
+    <div>
+        <h1 class="heading">Top Food Items</h1>
+        <div class="foodItems">
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                    alt="Pasta">
+                <h2>Pasta</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfVFB-65jhIjOpESJSeSvxSoRs5mcaogKObA&usqp=CAU"
+                    alt="Pizza">
+                <h2>Pizza</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1KsfgJkBEoyXCHaa7cAi64a1LGQE5A3OBhA&usqp=CAU"
+                    alt="Fries">
+                <h2>Fries</h2>
+            </div>
+            <div>
+                <img src="https://i.insider.com/5d8ca1222e22af53447766c2?width=1100&format=jpeg&auto=webp" alt="Burger">
+                <h2>Burger</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNwxDOQbdzbhxOwxRC4hUMeuE0iPin5s6ETg&usqp=CAU"
+                    alt="Cake">
+                <h2>Cake</h2>
+            </div>
+        </div>
     </div>
-    <div class="Suggest">
-        <h2>Suggetions</h2>
-
+    <div>
+        <h1 class="heading">Suggestions</h1>
+        <div class="foodItems">
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                    alt="Pasta">
+                <h2>Pasta</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfVFB-65jhIjOpESJSeSvxSoRs5mcaogKObA&usqp=CAU"
+                    alt="Pizza">
+                <h2>Pizza</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1KsfgJkBEoyXCHaa7cAi64a1LGQE5A3OBhA&usqp=CAU"
+                    alt="Fries">
+                <h2>Fries</h2>
+            </div>
+            <div>
+                <img src="https://i.insider.com/5d8ca1222e22af53447766c2?width=1100&format=jpeg&auto=webp" alt="Burger">
+                <h2>Burger</h2>
+            </div>
+            <div>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNwxDOQbdzbhxOwxRC4hUMeuE0iPin5s6ETg&usqp=CAU"
+                    alt="Cake">
+                <h2>Cake</h2>
+            </div>
+        </div>
     </div>
+    <br><br>
 </body>
 
 </html>
