--- a/assignment #6/index.html
+++ b/assignment #6/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment #6</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        <div></div>
-        <div></div>
-        <div></div>
+        <h1>Evoluation of bicycle</h1>
+        <p>
+            <blockquote>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati eius magni nam blanditiis vel
+                officia aliquid. Assumenda, odit. Accusamus sequi cumque corporis tempore ullam pariatur quae, corrupti quod
+                reiciendis.
+            </blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veritatis adipisci reprehenderit at
+            voluptatum,
+            eveniet natus blanditiis, impedit suscipit, commodi dolorem hic voluptates placeat non in ab ea distinctio
+            molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veritatis adipisci reprehenderit at
+            voluptatum,
+            eveniet natus blanditiis, impedit suscipit, commodi dolorem hic voluptates placeat non in ab ea distinctio
+            molestias.
+        </p>
+        
     </div>
 </body>
+
 </html>
