--- a/assignment #6/index.html
+++ b/assignment #6/index.html
@@ -10,23 +10,14 @@
 
 <body>
     <div class="container">
-        <h1>Evoluation of bicycle</h1>
         <p>
-            <blockquote>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente obcaecati eius magni nam blanditiis vel
-                officia aliquid. Assumenda, odit. Accusamus sequi cumque corporis tempore ullam pariatur quae, corrupti quod
-                reiciendis.
-            </blockquote>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veritatis adipisci reprehenderit at
-            voluptatum,
-            eveniet natus blanditiis, impedit suscipit, commodi dolorem hic voluptates placeat non in ab ea distinctio
-            molestias.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi veritatis adipisci reprehenderit at
-            voluptatum,
-            eveniet natus blanditiis, impedit suscipit, commodi dolorem hic voluptates placeat non in ab ea distinctio
-            molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto cum temporibus doloremque. Repudiandae ex
+            consequatur animi aspernatur maxime dolorem rerum tempore natus minus! Veritatis necessitatibus aut tempore
+            et dicta architecto.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem doloribus sequi laudantium natus at
+            nesciunt, iste itaque fuga expedita earum ipsam hic inventore facilis aperiam. Accusamus molestias nobis
+            modi laborum.
         </p>
-        
     </div>
 </body>
 
