animations topic clear

--- a/assignment #6/index.html
+++ b/assignment #6/index.html
@@ -11,12 +11,7 @@
 <body>
     <div class="container">
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto cum temporibus doloremque. Repudiandae ex
-            consequatur animi aspernatur maxime dolorem rerum tempore natus minus! Veritatis necessitatibus aut tempore
-            et dicta architecto.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem doloribus sequi laudantium natus at
-            nesciunt, iste itaque fuga expedita earum ipsam hic inventore facilis aperiam. Accusamus molestias nobis
-            modi laborum.
+            Lorem 
         </p>
     </div>
 </body>
