--- a/assignment #6/index.html
+++ b/assignment #6/index.html
@@ -10,9 +10,7 @@
 
 <body>
     <div class="container">
-        <p>
-            Lorem 
-        </p>
+        <p>Bilal Ahmad</p>
     </div>
 </body>
 
