--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -11,7 +11,30 @@
 </head>
 
 <body>
-    <h1>hello world</h1>
+    <div class="mainDiv">
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="navbar-brand" href="#"><img width="130px" height="auto" src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png" alt=""></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#"></a>
+                        </li>
+                    </ul>
+                    <form class="my-2 my-lg-0">
+                        <button type="button" class="btn btn-link memberShipBtn">Membership</button>
+                        <button type="button" class="btn navBtn sayHelloBtn">Say Hello</button>
+                    </form>
+                </div>
+            </nav>
+        </div>
+    </div>
 
 
 
