--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="mainDiv">
-        <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#"><img width="130px" height="auto" src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -33,7 +32,11 @@
                     </form>
                 </div>
             </nav>
-        </div>
+            <div>
+                <h2>Designer, Front-end Developer & Mentor</h2>
+                <p>I design and code beautiful and simple things, and i love what i do</p>
+                
+            </div>
     </div>
 
 
