today final commit

--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -12,31 +12,43 @@
 
 <body>
     <div class="mainDiv">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img width="130px" height="auto" src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png" alt=""></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="#"><img width="130px" height="auto"
+                    src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png"
+                    alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
-                        </li>
-                    </ul>
-                    <form class="my-2 my-lg-0">
-                        <button type="button" class="btn btn-link memberShipBtn">Membership</button>
-                        <button type="button" class="btn navBtn sayHelloBtn">Say Hello</button>
-                    </form>
-                </div>
-            </nav>
-            <div>
-                <h2>Designer, Front-end Developer & Mentor</h2>
-                <p>I design and code beautiful and simple things, and i love what i do</p>
-                
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"></a>
+                    </li>
+                </ul>
+                <form class="my-2 my-lg-0">
+                    <button type="button" class="btn btn-link memberShipBtn">Membership</button>
+                    <button type="button" class="btn navBtn sayHelloBtn">Say Hello</button>
+                </form>
             </div>
+        </nav>
+        <div class="profileImg">
+            <h2>Designer, Front-end Developer & Mentor</h2>
+            <p>I design and code beautiful and simple things, and i love what i do</p>
+            <img src="https://previews.123rf.com/images/farhad73/farhad731908/farhad73190800065/128902466-bearded-men-hipster-face-fashion-silhouette-emblem-icon-label-vector-illustration-.jpg"
+                alt="Profile Image">
+        </div>
+        <div class="aboutSection">
+            <div class="glass">
+                <h1>Hi, I am Bilal Ahmad.Nice to meet you.</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti unde voluptatum quos,
+                    reprehenderit cum magnam maxime saepe cumque quidem autem eum, qui sequi sit eius expedita nulla,
+                    neque cupiditate nemo? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam aperiam dicta
+                    amet saepe laboriosam repudiandae, est debitis iure neque quas magnam hic natus vero, distinctio
+                    quisquam earum repellendus voluptates aspernatur?</p>
+            </div>
+        </div>
     </div>
 
 
