--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -140,6 +140,32 @@
             <button type="button" class="btn seeMoreProjects">See More On Dribble</button>
             <br><br><br><br><br><br>
             <p class="collaboration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus</p>
+            <div class="row recentWork">
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+                <div class="col-sm">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                        alt="Pasta">
+                </div>
+            </div>
         </div>
     </div>
 
