--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -169,131 +169,143 @@
         </div>
         <div>
             <div class="profileImg">
-            <div class="aboutSection">
-                <div class="glass">
-                    <h1>Hi, I am Bilal Ahmad.Nice to meet you.</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti unde voluptatum quos,
-                        reprehenderit cum magnam maxime saepe cumque quidem autem eum, qui sequi sit eius expedita
-                        nulla,
-                        neque cupiditate nemo? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam aperiam
-                        dicta
-                        amet saepe laboriosam repudiandae, est debitis iure neque quas magnam hic natus vero, distinctio
-                        quisquam earum repellendus voluptates aspernatur?</p>
-                </div>
-            </div>
-            <div class="container recentWorkSection">
-                <h1>My Resent Work</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum quam, laboriosam qui</p>
-                <div class="row recentWork">
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm">
-                        <div class="card" style="width: 18rem;">
-                            <img class="card-img-top"
-                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
+                <div class="aboutSection">
+                    <div class="glass">
+                        <h1>Hi, I am Bilal Ahmad.Nice to meet you.</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti unde voluptatum quos,
+                            reprehenderit cum magnam maxime saepe cumque quidem autem eum, qui sequi sit eius expedita
+                            nulla,
+                            neque cupiditate nemo? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam aperiam
+                            dicta
+                            amet saepe laboriosam repudiandae, est debitis iure neque quas magnam hic natus vero,
+                            distinctio
+                            quisquam earum repellendus voluptates aspernatur?</p>
                     </div>
                 </div>
-                <p class="collaboration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s</p>
-                <button type="button" class="btn seeMoreProjects">See More On Dribble</button>
-                <br><br><br><br><br><br>
+                <div class="container recentWorkSection">
+                    <h1>My Resent Work</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum quam, laboriosam qui</p>
+                    <div class="row recentWork2">
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm">
+                            <div class="card" style="width: 18rem;">
+                                <img class="card-img-top"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ58RwR0GpwG44GNAX217liEHrAApTsfFcvLQ&usqp=CAU"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the
+                                        bulk of the card's content.</p>
+                                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="collaboration">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s</p>
+                    <button type="button" class="btn seeMoreProjects">See More On Dribble</button>
+                    <br><br><br><br><br><br>
+                </div>
+            </div>
+            <div class="testimonials">
+                <h1>Testimonilas</h1>
+                <h5>ipsum dolor sit amet consectetur adipisicing elit. Ips</h5>
+                <img src="https://previews.123rf.com/images/farhad73/farhad731908/farhad73190800065/128902466-bearded-men-hipster-face-fashion-silhouette-emblem-icon-label-vector-illustration-.jpg"
+                    alt="Profile Image">
+                <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s"</p>
+                <h5>Bilal Ahmad</h5>
+            </div>
+            <div class="footer2">
+                <h2>Start a Project</h2>
+                <p>Start a ProjectStart a ProjectStart a Project</p>
+                <button type="button" class="btn seeMoreProjects">Lets do this</button>
             </div>
         </div>
-        <div class="testimonials">
-            <h1>Testimonilas</h1>
-            <h5>ipsum dolor sit amet consectetur adipisicing elit. Ips</h5>
-            <img src="https://previews.123rf.com/images/farhad73/farhad731908/farhad73190800065/128902466-bearded-men-hipster-face-fashion-silhouette-emblem-icon-label-vector-illustration-.jpg"
-                alt="Profile Image">
-            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum minus s"</p>
-            <h5>Bilal Ahmad</h5>
-        </div>
-    </div>
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
