--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -288,9 +288,19 @@
                 <h5>Bilal Ahmad</h5>
             </div>
             <div class="footer2">
-                <h2>Start a Project</h2>
-                <p>Start a ProjectStart a ProjectStart a Project</p>
-                <button type="button" class="btn seeMoreProjects">Lets do this</button>
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <h2>Start a Project</h2>
+                        </div>
+                        <div class="col">
+                            <p>Start a ProjectStart a ProjectStart a Project</p>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn">Lets do this</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
