--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -289,18 +289,22 @@
             </div>
             <div class="footer2">
                 <div class="container">
-                    <div class="row">
+                    <div class="row footer2Align">
                         <div class="col">
                             <h2>Start a Project</h2>
                         </div>
                         <div class="col">
-                            <p>Start a ProjectStart a ProjectStart a Project</p>
+                            <p>Start a ProjectStart a ProjectStart a ProjectStart a ProjectStart a ProjectStart a
+                                Project</p>
                         </div>
                         <div class="col">
-                            <button type="button" class="btn">Lets do this</button>
+                            <button type="button" class="btn letsDoThis">Lets do this</button>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div>
+
             </div>
         </div>
 
