--- a/assignment #7/index.html
+++ b/assignment #7/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Assignment #7</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -15,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand" href="#"><img width="130px" height="auto"
                     src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png"
-                    alt=""></a>
+                    alt="logoIcon"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -303,8 +304,19 @@
                     </div>
                 </div>
             </div>
-            <div>
-
+            <div class="footer">
+                <div class="fuckYou">
+                    <img width="130px" height="auto"
+                        src="https://tamaracwaltersdotcom.files.wordpress.com/2016/04/graphic-myportfolio-01-1024x550.png"
+                        alt="logoIcon">
+                    <h3>Loremro dicta? Repudiandae, cupidorum rerum odio!</h3>
+                </div>
+                <div class="footerIcons">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                    <i class="fa fa-dribbble" aria-hidden="true"></i>
+                </div>
             </div>
         </div>
 
