--- a/assignment #8/index.html
+++ b/assignment #8/index.html
@@ -6,6 +6,27 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <h2>Calculator</h2>
+    <div>
+        <input type="text">
+        <div>
+            <button>9</button>
+            <button>8</button>
+            <button>7</button>
+            <button>6</button>
+            <button>5</button>
+            <button>4</button>
+            <button>3</button>
+            <button>2</button>
+            <button>1</button>
+            <button>0</button>
+            <button>+</button>
+            <button>-</button>
+            <button>*</button>
+            <button>/</button>
+            <button>=</button>
+            <button>AC</button>
+        </div>
+    </div>
 </body>
 </html>
