--- a/assignment #8/index.html
+++ b/assignment #8/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h2>Calculator</h2>
-    <div>
-        <input type="text">
+    <div class="main">
+        <h2>Calculator</h2>
         <div>
-            <button>9</button>
-            <button>8</button>
-            <button>7</button>
-            <button>6</button>
-            <button>5</button>
-            <button>4</button>
-            <button>3</button>
-            <button>2</button>
-            <button>1</button>
-            <button>0</button>
-            <button>+</button>
-            <button>-</button>
-            <button>*</button>
-            <button>/</button>
-            <button>=</button>
-            <button>AC</button>
+            <input class="outputScr" type="text">
+            <div class="pad">
+                <div>
+                    <button>9</button>
+                    <button>8</button>
+                    <button>7</button>
+                </div>
+                <button>6</button>
+                <button>5</button>
+                <button>4</button>
+                <button>3</button>
+                <button>2</button>
+                <button>1</button>
+                <button>0</button>
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+                <button>=</button>
+                <button>AC</button>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
