practice css animations

--- a/Animation practice/index.html
+++ b/Animation practice/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="mainBox">
-
+      <p>hello world from beginner</p>
     </div>
 
     <script src="app.js"></script>
