--- a/Animation practice/index.html
+++ b/Animation practice/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="mainBox">
-      <p>hello world from beginner</p>
-    </div>
+    <div class="mainBox1" id="box1"></div>
+    <div class="mainBox2" id="box2"></div>
+    <div class="mainBox3" id="box3"></div>
 
     <script src="app.js"></script>
   </body>
